# immich-sync

./: .gitignore  README.md  config.example.json  data.db  main.py  plan.md  pyproject.toml
app/: __init__.py  auth.py  config.py  db.py  immich_client.py  main.py  migrations.py  models.py  routers.py  routes.py  scheduler.py  scheduler_utils.py  schemas.py  sync.py  sync_service.py
app/templates/: add_instance.html  base.html  edit_group.html  edit_instance.html  index.html  sync_detail.html  validate.html
frontend/: index.html  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/groups/[id]/: GroupClient.tsx  page.tsx
frontend/src/components/: LoginRegister.tsx
frontend/src/lib/: api.ts
tests/: test_immich_client.py  test_sync.py
