[project]
name = "immich-sync"
version = "0.1.0"
description = "Bi-directional album sync coordinator for multiple Immich instances"
authors = [
  { name = "Immich Sync" }
]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.21",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10.4",
  "pydantic-settings>=2.4.0",
]

[project.scripts]
immich-sync = "app.main:run"
immich-sync-web = "app.main:run"

[project.optional-dependencies]
web = []

[tool.uv]
index-strategy = "unsafe-best-match"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["frontend*", "tests*"]

