[project]
name = "immich-sync"
version = "0.1.0"
description = "Sync photos between multiple Immich instances"
authors = [
  { name = "Immich Sync" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "tqdm>=4.66.0",
]

[project.scripts]
immich-sync = "main:main"

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
]
index-strategy = "unsafe-best-match"

[tool.ruff]
line-length = 120
target-version = "py311"



[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

